# my_sim

./: CMakeLists.txt  README.md  package.xml
include/my_sim/: my_sim_vr_pose.h
launch/: run.launch  run_vr.launch  spawn_quadrotor.launch  test_city.launch
rviz/: my_sim.rviz
src/: my_sim_vr_pose.cpp
urdf/: quadrotor_lvi.gazebo.xacro  quadrotor_lvi.urdf.xacro  rgbd_camera.urdf.xacro  virtual_frame.urdf.xacro
worlds/: test_city.world
