<?xml version="1.0"?>
<package format="2">
  <name>my_sim</name>
  <version>0.0.0</version>
  <description>The my_sim package</description>

  <maintainer email="carl_liu@todo.todo">carl_liu</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_tool</buildtool_depend>

  <depend>roscpp</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_dev</depend>
  <depend>geometry_msgs</depend>

  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models/"/>
  </export>
</package>
